--- a/uhunt/build.gradle
+++ b/uhunt/build.gradle
@@ -18,3 +18,10 @@ allprojects {
         maven { url "https://jitpack.io" }
     }
 }
+
+ext {
+    archLifecycleVersion = '2.1.0-alpha04'
+    androidxArchVersion = '2.0.0'
+    androidxConstraintVersion = '1.1.3'
+    coroutines = '1.2.0'
+}
