--- a/uhunt/app/build.gradle
+++ b/uhunt/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.androidxConstraintVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.androidxArchVersion"
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
