--- a/uhunt/build.gradle
+++ b/uhunt/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.61'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -20,10 +20,10 @@ allprojects {
 }
 
 ext {
-    archNavVersion = "2.1.0-alpha04"
-    reftrofitVersion = '2.5.0'
-    archLifecycleVersion = '2.2.0-alpha01'
-    androidxArchVersion = '2.0.0'
+    archNavVersion = '2.2.0-rc03'
+    reftrofitVersion = '2.6.2'
+    archLifecycleVersion = '2.2.0-rc03'
+    androidxArchVersion = '2.1.0'
     androidxConstraintVersion = '1.1.3'
     coroutines = '1.2.0'
 }
